    TODO: Fix line numbering in built-in editor (Improve built-in editor)
    TODO: Support for authenticated task termination

    http://stackoverflow.com/questions/13355363/nstask-requires-flush-when-reading-from-a-process-stdout-terminal-does-not
    http://stackoverflow.com/questions/1276029/non-blocking-stdio

5.2
    TODO: Refactor status menu item menu generation from output to share code between ScriptExec and Platypus.app
    TODO: Drag and drop from icon view should be file based, not TIFF pasteboard data

5.1
    * New Build All Examples feature
    * ScriptExec windows now remember window size and position between launches
    * Fixed issue where MainMenu.nib was stripped and thus not editable using XCode
    * Smarter handling of dropped files via more intelligent methods to determine if a file is a script
    * Fixed issue with window behaviour during resizing in Progress Bar interface
    * Added new WebViewDroplet example which lists dropped files using HTML output
    * Fixed critical issue with Web View interface type
    * Automatic app name generation from script name now respects camelCase and strips whitespace
    * Using NSString constants for NSUserDefault string keys
    * clearAllFields method uses default spec to set controls
    * Give image names for interface type and interpreter a filename prefix indicating family
    * Added build script for cat2html
    * Added support for multiple arguments to --bundled-file in command line tool via "|" separator
    * Various minor UI improvements (button status in args & drop settings window)
    * Now treating drop into STPathTextField like any other drop on window
    * Editable type lists in drop settings are now click-editable like those in Args controller
    * Output string "----\n" in Status Menu mode now creates menu separator item
    * Uniform Type Identifiers and Application Bundle Identifiers are now validated
    * New template processing option for Status Item icon